[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.1'
parking_lot = '0.7.1'
slog = '^2'
tokio = '0.1'
trie-root = '0.11.0'

bellman-verifier = { path = "core/bellman-verifier"}
demo = { package = "zero-chain-cli", path = "demo/cli" }
zcrypto = { package = "zero-chain-crypto", path = "core/crypto" }
jubjub = { path = "core/jubjub" }
zpairing = { package = "zero-chain-pairing", path = "core/pairing" }
zprimitives = { package = "zero-chain-primitives", path = "core/primitives" }
proofs = { package = "zero-chain-proofs", path = "core/proofs" }
scrypto = { package = "sapling-crypto", git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
keys = { path = "core/keys"}
bellman = { git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
pairing = { git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
rand = "0.4"
lazy_static = "1.3.0"
wasm-utils = {package = "zerochain-wasm-utils", path = "demo/wasm-utils"}
hex = "0.3.2"
clap = "~2.32"

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.node-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.zero-chain-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[package]
authors = ['Osuke Sudo<dish230@gmail.com>']
build = 'build.rs'
edition = '2018'
name = 'zero-chain'
version = '1.0.0'

[[bin]]
name = 'zero-chain'
path = 'src/main.rs'

[[bin]]
name = 'zero-chain-cli'
path = 'demo/cli/src/main.rs'

[workspace]
members = [
    "core/bellman-verifier",
    "core/crypto",
    "demo/cli",
    "core/jubjub",
    "core/pairing",
    "core/primitives",
    "core/proofs",
    "runtime",
    "core/keys",
    "core/sonic",
    "modules/indices",
    "modules/executive",
]
exclude = [
    "runtime/wasm",
    "demo/wasm-utils",
]