[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
slog = '^2'
tokio = '0.1'
trie-root = '0.12.0'
bellman-verifier = { path = "core/bellman-verifier"}
zcrypto = { package = "zerochain-crypto", path = "core/crypto" }
zpairing = { package = "zerochain-pairing", path = "core/pairing" }
zprimitives = { package = "zerochain-primitives", path = "core/primitives" }
proofs = { package = "zerochain-proofs", path = "core/proofs" }
scrypto = { package = "sapling-crypto", git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
keys = { path = "core/keys"}
bellman = { git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
pairing = { git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
rand = "0.4"
wasm-utils = {package = "zerochain-wasm-utils", path = "demo/wasm-utils"}
hex = "0.3.2"
clap = "~2.32"
polkadot-rs = { git = "https://github.com/LayerXcom/polkadot.rs" }
zjubjub = { package = "jubjub", path = "core/jubjub"}
zface = { path = "zface" }

[dependencies.basic-authorship]
git = 'https://github.com/osuketh/substrate.git'
package = 'substrate-basic-authorship'
branch = "patch-zerochain"

[dependencies.consensus]
git = 'https://github.com/osuketh/substrate.git'
package = 'substrate-consensus-aura'
branch = "patch-zerochain"

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/osuketh/substrate.git'
package = 'substrate-inherents'
branch = "patch-zerochain"

[dependencies.network]
git = 'https://github.com/osuketh/substrate.git'
package = 'substrate-network'
branch = "patch-zerochain"

[dependencies.zerochain-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/osuketh/substrate.git'
package = 'substrate-primitives'
branch = "patch-zerochain"

[dependencies.runtime-primitives]
git = 'https://github.com/osuketh/substrate.git'
package = 'sr-primitives'
branch = "patch-zerochain"

[dependencies.sr-io]
git = 'https://github.com/osuketh/substrate.git'
branch = "patch-zerochain"

[dependencies.substrate-cli]
git = 'https://github.com/osuketh/substrate.git'
branch = "patch-zerochain"

[dependencies.substrate-client]
git = 'https://github.com/osuketh/substrate.git'
branch = "patch-zerochain"

[dependencies.substrate-executor]
git = 'https://github.com/osuketh/substrate.git'
branch = "patch-zerochain"

[dependencies.substrate-service]
git = 'https://github.com/osuketh/substrate.git'
branch = "patch-zerochain"

[dependencies.transaction-pool]
git = 'https://github.com/osuketh/substrate.git'
package = 'substrate-transaction-pool'
branch = "patch-zerochain"

[package]
authors = ['Osuke Sudo<dish230@gmail.com>']
build = 'build.rs'
edition = '2018'
name = 'zerochain'
version = '1.0.0'

[[bin]]
name = 'zerochain'
path = 'src/main.rs'

[workspace]
members = [
    "zface",
    "core/bellman-verifier",
    "core/crypto",
    "core/jubjub",
    "core/pairing",
    "core/primitives",
    "core/proofs",
    "core/musig",
    "core/keys",
    "runtime",
    "modules/aura",
    "modules/balances",
    "modules/consensus",
    "modules/executive",
    "modules/indices",
    "modules/session",
    "modules/staking",
    "modules/sudo",
    "modules/system",
    "modules/timestamp",
    "modules/encrypted-balances",
    "modules/encrypted-assets",
    "modules/anonymous-balances",
    "modules/zk-system",
]
exclude = [
    "runtime/wasm",
    "demo/wasm-utils",
]