[package]
name = "cli"
version = "0.1.0"
authors = ["osuke <dish230@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.4"
zero-chain-proofs = { path = "../proofs" }
structopt = "0.2"
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
# pairing = { git = "https://github.com/zkcrypto/pairing", rev = "09b6e6f9212020f385218e5cf5287e381ccd312b" }
pairing = { git = "https://github.com/zcash/librustzcash" }
lazy_static = "1.0"
# bellman = { path = "../bellman"}
bellman = { git = "https://github.com/zcash/librustzcash" }
pcrypto = { package = "parity-crypto", version = "0.3.0" }
scrypto = { package = "sapling-crypto", git = "https://github.com/zcash/librustzcash" }
zcrypto = { package = "zero-chain-crypto", path = "../crypto"}
byteorder = "1.3"

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"
