[package]
name = "zero-chain-crypto"
version = "0.1.0"
authors = ["osuke <dish230@gmail.com>"]
edition = "2018"

[dependencies]
sapling-crypto = { git = "https://github.com/zcash/librustzcash" }

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"

[feature]
default = ["std"]
std = []
