[package]
name = "zero-chain-demo"
version = "0.1.0"
authors = ["osuke <dish230@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.4"
proofs = { package = "zero-chain-proofs", path = "../proofs" }
structopt = "0.2"
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
pairing = { git = "https://github.com/zcash/librustzcash", rev = "1a1c77536d824d7b6bd0eaf3e9888829a7a1f5dc" }
lazy_static = "1"
bellman = { git = "https://github.com/zcash/librustzcash", rev = "1a1c77536d824d7b6bd0eaf3e9888829a7a1f5dc" }
scrypto = { package = "sapling-crypto", git = "https://github.com/zcash/librustzcash", rev = "1a1c77536d824d7b6bd0eaf3e9888829a7a1f5dc" }
zcrypto = { package = "zero-chain-crypto", path = "../crypto"}
zprimitives = { package = "zero-chain-primitives", path = "../primitives" }

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"
