[package]
name = "gen_key"
version = "0.1.0"
authors = ["osuke <dish230@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6"
zero-chain-proofs = { path = "../proofs" }
structopt = "0.2"
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
pairing = { git = "https://github.com/osuketh/zcash-to-substrate" }
sapling-crypto = { git = "https://github.com/osuketh/zcash-to-substrate" }
lazy_static = "1.0"
