[package]
name = "zero-chain-pairing"

# Remember to change version string in README.md.
version = "0.14.2"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Osuke Sudo <dish230@gmail.com>",
    ]
license = "MIT/Apache-2.0"
description = "Pairing-friendly elliptic curve library"

[dependencies]
rand = { version = "0.4", default-features = false }
byteorder = { version = "1", default-features = false }
blake2 = "0.7"

[features]
unstable-features = ["expose-arith"]
expose-arith = []
u128-support = []
std = []
default = ["std"]
