[package]
name = "zero-chain-primitives"
version = "0.1.0"
authors = ["osuke <dish230@gmail.com>"]

[dependencies]
parity-codec-derive = { version = "2.0" }
parity-codec = { version = "2.0" }
fixed-hash = { version = "0.3.0", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
substrate-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-std = { git = "https://github.com/paritytech/substrate", default-features = false }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
shasper-crypto = { git = "https://github.com/paritytech/shasper", default-features = false }
hash-db = { git = "https://github.com/paritytech/trie", default-features = false }
byteorder = { version = "1.2", default-features = false }
parity-crypto = "0.2.0"
zero-chain-proofs = { path = "../proofs" }
zero-chain-crypto = { path = "../crypto" }
pairing = { git = "https://github.com/osuketh/zcash-to-substrate" }
bellman = { git = "https://github.com/osuketh/zcash-to-substrate" }
sapling-crypto = { git = "https://github.com/osuketh/zcash-to-substrate" }
rand = { version = "0.4", default-features = false }

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"

[features]
default = ["std"]
std = [
	"fixed-hash/std",
	"substrate-primitives/std",
	"parity-codec/std",
	"sr-primitives/std",
	"sr-std/std",
	"serde",
	"serde/std",
	"serde_derive",
	"shasper-crypto/std",	
	"hash-db/std",	
	"byteorder/std",
]
