[package]
name = "zero-chain-primitives"
version = "0.1.0"
authors = ["osuke <dish230@gmail.com>"]
edition = "2018"

[dependencies]
parity-codec-derive = { version = "3.0", default-features = false }
parity-codec = { version = "3.0", default-features = false }
byteorder = { version = "1", default-features = false }
pairing = { package = "zero-chain-pairing", path = "../pairing", default-features = false }
bellman-verifier = { path = "../bellman-verifier", default-features = false }
jubjub = { path = "../jubjub", default-features = false }
rand = { version = "0.4", default-features = false }
fixed-hash = { version = "0.3.0", default-features = false }

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"
default-features = false

[features]
default = ["std"]
std = [	
	"parity-codec/std",
    "parity-codec-derive/std",	
	"byteorder/std",	
	"pairing/std",
	"bellman-verifier/std",	
	"jubjub/std",
	"rand/std",
	"blake2-rfc/std",	
	"fixed-hash/std"	
]
