[package]
name = "zero-chain-proofs"
version = "0.1.0"
authors = ["osuke <dish230@gmail.com>"]
edition = "2018"

[dependencies]
pairing = { git = "https://github.com/zcash/librustzcash", rev = "1a1c77536d824d7b6bd0eaf3e9888829a7a1f5dc" }
bellman = { git = "https://github.com/zcash/librustzcash", rev = "1a1c77536d824d7b6bd0eaf3e9888829a7a1f5dc" }
scrypto = { package = "sapling-crypto", git = "https://github.com/zcash/librustzcash", rev = "1a1c77536d824d7b6bd0eaf3e9888829a7a1f5dc" }
rand = "0.4"
byteorder = "1"
zcrypto = { package = "zero-chain-crypto", path = "../crypto" }

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"
