[dependencies]
pairing = { package = "zero-chain-pairing", path = "../core/pairing", default-features = false }
bellman-verifier = { path = "../core/bellman-verifier", default-features = false }
zprimitives = { package = "zero-chain-primitives", path = "../core/primitives", default-features = false }
jubjub = { path = "../core/jubjub", default-features = false }
zcrypto = { package = "zero-chain-crypto", path = "../core/crypto", default-features = false }
keys = { path = "../core/keys", default-features = false }
indices = { package = "srml-indices", path = "../modules/indices", default-features = false }
rand = { version = "0.4", default-features = false }
executive = { package = "srml-executive", path = "../modules/executive", default-features = false }
hex-literal = '0.1'

[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.consensus]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-consensus'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.consensus_authorities]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-authorities'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.2'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
default-features = false
version = '1.0'

[dependencies.serde_derive]
optional = true
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[features]
default = ['std']
std = [
    'parity-codec/std',
    'primitives/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'executive/std',
    'aura/std',
    'indices/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde_derive',
    'serde/std',
    'safe-mix/std',
    'consensus-aura/std',
    'offchain-primitives/std',

    "pairing/std",
	"bellman-verifier/std",
	"zprimitives/std",
	"jubjub/std",
	"keys/std",
    "rand/std",
]

[package]
authors = ['Osuke <dish230@gmail.com>']
edition = '2018'
name = 'zero-chain-runtime'
version = '1.0.0'
