[dependencies]
pairing = { package = "zerochain-pairing", path = "../core/pairing", default-features = false }
bellman-verifier = { path = "../core/bellman-verifier", default-features = false }
zprimitives = { package = "zerochain-primitives", path = "../core/primitives", default-features = false }
jubjub = { path = "../core/jubjub", default-features = false }
zcrypto = { package = "zerochain-crypto", path = "../core/crypto", default-features = false }
keys = { path = "../core/keys", default-features = false }
rand = { version = "0.4", default-features = false }
executive = { package = "srml-executive", path = "../modules/executive", default-features = false }
system = { package = "srml-system", path = "../modules/system", default-features = false }
consensus = { package = "srml-consensus", path = "../modules/consensus", default-features = false }
balances = { package = "srml-balances", path = "../modules/balances", default-features = false }
aura = { package = "srml-aura", path = "../modules/aura", default-features = false }
indices = { package = "srml-indices", path = "../modules/indices", default-features = false }
sudo = { package = "srml-sudo", path = "../modules/sudo", default-features = false }
timestamp = { package = "srml-timestamp", path = "../modules/timestamp", default-features = false }
hex-literal = '0.1'
encrypted-balances = { path = "../modules/encrypted-balances", default-features = false }

[dependencies.client]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'substrate-client'
branch = "patch-zerochain"

[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'substrate-consensus-aura-primitives'
branch = "patch-zerochain"

[dependencies.consensus-authorities]
default-features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'substrate-consensus-authorities'
branch = "patch-zerochain"

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'substrate-offchain-primitives'
branch = "patch-zerochain"

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.2'

[dependencies.primitives]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'substrate-primitives'
branch = "patch-zerochain"

[dependencies.rstd]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'sr-std'
branch = "patch-zerochain"

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'sr-io'
branch = "patch-zerochain"

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'sr-primitives'
branch = "patch-zerochain"

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
optional = true
version = '1.0'

[dependencies.serde_derive]
optional = true
version = '1.0'

[dependencies.support]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'srml-support'
branch = "patch-zerochain"

[dependencies.version]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'sr-version'
branch = "patch-zerochain"

[features]
default = ['std']
std = [
    'parity-codec/std',
    'primitives/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'executive/std',
    'aura/std',
    'indices/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde_derive',
    'serde',
    'safe-mix/std',
    'consensus-aura/std',
    'offchain-primitives/std',
    'consensus-authorities/std',
    'encrypted-balances/std',

    "pairing/std",
	"bellman-verifier/std",
	"zprimitives/std",
	"jubjub/std",
	"keys/std",
    "rand/std",
]

[package]
authors = ['Osuke <dish230@gmail.com>']
edition = '2018'
name = 'zerochain-runtime'
version = '1.0.0'
