[package]
name = "zeroc"
version = "0.1.0"
authors = ["osuke <dish230@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.4"
proofs = { package = "zerochain-proofs", path = "../core/proofs" }
clap = "~2.32"
primitives = { package = "substrate-primitives", git = "https://github.com/osuketh/substrate", branch = "patch-zerochain" }
runtime-primitives = { package = "sr-primitives", git = "https://github.com/osuketh/substrate", branch = "patch-zerochain" }
zpairing = { package = "zerochain-pairing", path = "../core/pairing" }
pairing = { git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
bellman = { git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
scrypto = { package = "sapling-crypto", git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
bellman-verifier = { path = "../core/bellman-verifier"}
zcrypto = { package = "zerochain-crypto", path = "../core/crypto"}
zprimitives = { package = "zerochain-primitives", path = "../core/primitives" }
zjubjub = { package = "jubjub", path = "../core/jubjub"}
byteorder = "1"
keys = { path = "../core/keys" }
hex = "0.3.2"
polkadot-rs = { git = "https://github.com/LayerXcom/polkadot.rs" }
parity-codec = "3.2"
zerochain-runtime = { path = "../runtime" }
tiny-bip39 = "0.6.0"
substrate-bip39 = { git = "https://github.com/paritytech/substrate-bip39" }
dirs = "2.0"
console = "0.7"
log = "0.4"
env_logger = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_bytes = "0.11"
parity-crypto = "0.4"

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"
